--- a/pom.xml
+++ b/pom.xml
@@ -1,112 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.maxi.probando</groupId>
-    <artifactId>probandorepo</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>dashboard-pages</module>
-        <module>dashboard-tests</module>
-    </modules>
+  <groupId>com.maxi.probando</groupId>
+  <artifactId>probandorepo</artifactId>
+  <packaging>pom</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>dashboard-pages</module>
+    <module>dashboard-tests</module>
+  </modules>
 
-    <properties>
-        <!-- Appium -->
-        <appium.version>5.0.4</appium.version>
-        <!-- Google -->
-        <guava.version>22.0</guava.version>
-        <guice.version>4.1.0</guice.version>
-        <!-- Selenium -->
-        <selenium.version>3.7.1</selenium.version>
-        <!-- TestNG -->
-        <testng.version>6.11</testng.version>
-        <!-- Jackson -->
-        <jackson-datatype-jdk8.version>2.9.1</jackson-datatype-jdk8.version>
-        <!-- Logger -->
-        <SLF4J.version>1.7.25</SLF4J.version>
-    </properties>
+  <repositories>
+    <repository>
+      <id>my-local-repo</id>
+      <url>file://${basedir}/libs/hopper-test-lib2-1.0-SNAPSHOT.jar</url>
+    </repository>
+  </repositories>
 
-    <dependencies>
-        <!-- Appium -->
-        <dependency>
-            <groupId>io.appium</groupId>
-            <artifactId>java-client</artifactId>
-            <version>${appium.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!-- Google -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>${guice.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>${selenium.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server</artifactId>
-            <version>${selenium.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
-            <version>${selenium.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-remote-driver</artifactId>
-            <version>${selenium.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson-datatype-jdk8.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jdk8</artifactId>
-            <version>${jackson-datatype-jdk8.version}</version>
-        </dependency>
-        <!-- Logger -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${SLF4J.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${SLF4J.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.despegar.hopper</groupId>
-            <artifactId>hopper-test-lib2</artifactId>
-            <scope>system</scope>
-            <version>1.0-SNAPSHOT</version>
-            <systemPath>${project.basedir}/libs/hopper-test-lib2-1.0-SNAPSHOT.jar</systemPath>
-        </dependency>
-    </dependencies>
+  <properties>
+    <!-- Appium -->
+    <appium.version>5.0.4</appium.version>
+    <!-- Google -->
+    <guava.version>22.0</guava.version>
+    <guice.version>4.1.0</guice.version>
+    <!-- Selenium -->
+    <selenium.version>3.7.1</selenium.version>
+    <!-- TestNG -->
+    <testng.version>6.11</testng.version>
+    <!-- Jackson -->
+    <jackson-datatype-jdk8.version>2.9.1</jackson-datatype-jdk8.version>
+    <!-- Logger -->
+    <SLF4J.version>1.7.25</SLF4J.version>
+  </properties>
 
+  <dependencies>
+    <!-- Appium -->
+    <dependency>
+      <groupId>io.appium</groupId>
+      <artifactId>java-client</artifactId>
+      <version>${appium.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- Google -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>${guice.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>${selenium.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-server</artifactId>
+      <version>${selenium.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-api</artifactId>
+      <version>${selenium.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-remote-driver</artifactId>
+      <version>${selenium.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>${testng.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson-datatype-jdk8.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jdk8</artifactId>
+      <version>${jackson-datatype-jdk8.version}</version>
+    </dependency>
+    <!-- Logger -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${SLF4J.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${SLF4J.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.despegar.hopper</groupId>
+      <artifactId>hopper-test-lib2</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 
 </project>
