--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <repositories>
     <repository>
       <id>my-local-repo</id>
-      <url>file://${basedir}/libs/hopper-test-lib2-1.0-SNAPSHOT.jar</url>
+      <url>file://src/main/resources/hopper-test-lib2-1.0-SNAPSHOT.jar</url>
     </repository>
   </repositories>
 
@@ -112,5 +112,4 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
-
 </project>
