--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
   <repositories>
     <repository>
-      <id>my-local-repo</id>
-      <url>file://${basedir}/src/main/resources/hopper-test-lib2-1.0-SNAPSHOT.jar</url>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
     </repository>
   </repositories>
 
@@ -110,6 +110,11 @@
       <groupId>com.despegar.hopper</groupId>
       <artifactId>hopper-test-lib2</artifactId>
       <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.maximilianograjales</groupId>
+      <artifactId>hopper-test-lib2</artifactId>
+      <version>1.1</version>
     </dependency>
   </dependencies>
 </project>
